--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,17 +9,17 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8 text-center">
 					<div class="homepage-content">
-						<a href="{% url 'project_details' project_home.id %}">
+						<a href="{% url 'company_details' company_home.id %}">
 							<h1 class="text-white text-bold text-capitalize">
-								{{project_home.title }}
+								{{company_home.title }}
 							</h1>
 							<p class="author-home mt-3">
 								Company <br>
 								<strong>
-									<a class="text-capitalize">{{project_home.user.username }}</a>
+									<a class="text-capitalize">{{company_home.user.username }}</a>
 								</strong> <br>
 								<i>From</i> <br>
-								<strong class="text-capitalize">{{project_home.location }}</strong>
+								<strong class="text-capitalize">{{company_home.location }}</strong>
 							</p>
 							<div class="button-group mt-5">
 								<div class="d-flex justify-content-center">
@@ -42,9 +42,9 @@
 							<div class="col-md-1"></div>
 							<div class="col-md-10">
 								<!-- search input -->
-								<form action="{% url 'search_project' %}" class="mt-5" >
+								<form action="{% url 'search_company' %}" class="mt-5" >
 									<div class="input-group mb-3">
-										<input type="text" class="form-control" placeholder="Search for Project..." aria-label="Search for..."
+										<input type="text" class="form-control" placeholder="Search for Company..." aria-label="Search for..."
 												aria-describedby="basic-addon2" name="search_term">
 										<div class="input-group-append">
 											<button class="btn" type="button">Search</button>
@@ -70,25 +70,25 @@
 			{% for project in projects %}
 			<div class="col-md-12 col-lg-3">
 				<div class="card mb-4 post-card">
-					<img src="{{ project.image.url }}"
+					<img src="{{ company.image.url }}"
 						class="card-img-top" alt="Personal">
 					<div class="card-body">
-						<a href="{% url 'project_details' project.id %}">
-							<h6 class="fade-item mb-2">{{ project.title }}</h6>
+						<a href="{% url 'company_details' company.id %}">
+							<h6 class="fade-item mb-2">{{ company.title }}</h6>
 							<div class="d-flex justify-content-between location-date">
 								<div>
-									<p class="text-uppercase">{{ project.location }}</p>
+									<p class="text-uppercase">{{ company.location }}</p>
 								</div>
 								<div>
-									<p>{{ project.date|date}}</p>
+									<p>{{ company.date|date}}</p>
 								</div>
 							</div>
 							<div class="d-flex justify-content-between mt-2">
 								<div class="d-flex justify-content-start">
 									<div>
 										<!-- check if author image exists else display a placeholder -->
-										{% if project.user.profile_image %}
-										<img src="{{ project.user.profile_image.url }}"
+										{% if company.user.profile_image %}
+										<img src="{{ company.user.profile_image.url }}"
 												class="poster-img" alt="Author">
 										{% else %}
 										<img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
@@ -96,11 +96,11 @@
 										{% endif %}
 									</div>
 									<div>
-										<p class="author mt-2 text-uppercase"><strong>{{ project.user.first_name }} {{ project.user.last_name }}</strong></p>
+										<p class="author mt-2 text-uppercase"><strong>{{ company.user.first_name }} {{ company.user.last_name }}</strong></p>
 									</div>
 								</div>
 								<div class="display-on-hover">
-									<a href="{% url 'project_details' project.id %}" class="btn btn-custome"><small>Vote Now</small></a>
+									<a href="{% url 'company_details' company.id %}" class="btn btn-custome"><small>Vote Now</small></a>
 								</div>
 							</div>
 					  </a>
