--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -16,28 +16,28 @@
 			<div class="col-md-2"></div>
 		</div>
 		<div class="row mt-4">
-			{% for project in projects %}
+			{% for company in companies %}
 			<div class="col-md-12 col-lg-3">
 				<div class="card mb-4 post-card">
-					<img src="{{ project.image.url }}"
+					<img src="{{ company.image.url }}"
 						class="card-img-top" alt="Personal">
 					<div class="card-body">
-						<a href="{% url 'project_details' project.id %}">
-							<h6 class="fade-item mb-2">{{ project.title }}</h6>
+						<a href="{% url 'company_details' company.id %}">
+							<h6 class="fade-item mb-2">{{ company.title }}</h6>
 							<div class="d-flex justify-content-between location-date">
 								<div>
-									<p class="text-uppercase">{{ project.location }}</p>
+									<p class="text-uppercase">{{ company.location }}</p>
 								</div>
 								<div>
-									<p>{{ project.date|date}}</p>
+									<p>{{ company.date|date}}</p>
 								</div>
 							</div>
 							<div class="d-flex justify-content-between mt-2">
 								<div class="d-flex justify-content-start">
 									<div>
 										<!-- check if author image exists else display a placeholder -->
-										{% if project.user.profile_image %}
-										<img src="{{ project.user.profile_image.url }}"
+										{% if company.user.profile_image %}
+										<img src="{{ company.user.profile_image.url }}"
 												class="poster-img" alt="Author">
 										{% else %}
 										<img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
@@ -45,13 +45,13 @@
 										{% endif %}
 									</div>
 									<div>
-										<p class="author mt-2 text-uppercase"><strong>{{ project.user.first_name }} {{ project.user.last_name }}</strong></p>
+										<p class="author mt-2 text-uppercase"><strong>{{ company.user.first_name }} {{ company.user.last_name }}</strong></p>
 									</div>
 							</div>
 							<div class="display-on-hover">
-								<a href="{% url 'project_details' project.id %}" class="btn btn-custome"><small>Vote Now</small></a>
+								<a href="{% url 'company_details' company.id %}" class="btn btn-custome"><small>Vote Now</small></a>
 							</div>
-							</div>
+	
 					  </a>
 			    </div>
 			  </div>
